--- a/localization/en.ext.xml
+++ b/localization/en.ext.xml
@@ -634,8 +634,8 @@
     <AxisTitleColor>A color which will be used for title drawing.</AxisTitleColor>
     <BackColor>A background color for drawing this style.</BackColor>
     <BasicStyleColor>A base color for drawing this style.</BasicStyleColor>
-    <Border>A border of the component.</Border>
-    <Brush>A brush to fill the style.</Brush>
+    <Border>The appearance and behavior of the component border.</Border>
+    <Brush>The brush, which is used to draw background.</Brush>
     <BrushType>A value which indicates which type of brush will be used to draw this style.</BrushType>
     <ChartAreaBorderColor>A border color of area.</ChartAreaBorderColor>
     <ChartAreaBrush>A brush to fill a area.</ChartAreaBrush>
@@ -660,13 +660,13 @@
     <SeriesLabelsBrush>A brush that will be used to fill area of series labels.</SeriesLabelsBrush>
     <SeriesLabelsColor>A foreground color of series labels.</SeriesLabelsColor>
     <StyleColors>A list of colors which will be used for drawing chart series.</StyleColors>
-    <TextBrush>A brush to draw the text.</TextBrush>
+    <TextBrush>A brush of the style, which is used to display text.</TextBrush>
     <VertAlignment>A vertical alignment of the style.</VertAlignment>
   </StiBaseStyle>
   <StiBorder>
     <Color>A border color.</Color>
     <DropShadow>A value that indicates whether drop shadow is shown.</DropShadow>
-    <ShadowBrush>The border shadow brush.</ShadowBrush>
+    <ShadowBrush>A border shadow brush.</ShadowBrush>
     <ShadowSize>Shadow Size.</ShadowSize>
     <Side>Frame borders.</Side>
     <Size>A border size.</Size>
@@ -818,9 +818,9 @@
     <Font>A font which used for series title drawing in chart legend.</Font>
   </StiChartLegendLabels>
   <StiChartLegendTitle>
-    <Color>Title color of legend.</Color>
+    <Color>A title color of legend.</Color>
     <Font>A title font of the chart legend.</Font>
-    <Text>The title text of legend.</Text>
+    <Text>A title text of legend.</Text>
   </StiChartLegendTitle>
   <StiChartTable>
     <Font>Font of the chart table.</Font>
@@ -957,35 +957,44 @@
   </StiComboBoxControl>
   <StiComponent>
     <AfterPrintEvent>Occurs after the component printing.</AfterPrintEvent>
-    <Alias>A text that will be shown instead of a component name. If the text is not indicated then the name is shown.</Alias>
+    <Alias>Indicates the text that will be shown instead of the component name. If the text is not indicated, then the component name is shown.</Alias>
     <Anchor>Gets or sets a value which indicates the mode of linking component location to the parent component size..</Anchor>
+    <BackColor>The background color of the component.</BackColor>
     <BeforePrintEvent>Occurs before printing the component.</BeforePrintEvent>
     <Bookmark>An expression to fill the component Bookmark.</Bookmark>
-    <Border>A frame of the component.</Border>
-    <Brush>A brush to fill a component.</Brush>
+    <Border>The appearance and behavior of the component border.</Border>
+    <Brush>The brush, which is used to draw background.</Brush>
     <BusinessObject>Business Object that is used for getting data.</BusinessObject>
     <CanBreak>A value that indicates whether the component can or cannot break its contents on several pages.</CanBreak>
     <CanGrow>A value indicates that this object can grow.</CanGrow>
     <CanShrink>A value indicates that this object can shrink.</CanShrink>
     <CellDockStyle>A type of the cell docking.</CellDockStyle>
     <CellType>A type of the cell content.</CellType>
+    <CheckAlignment>Determines the location of the check inside the component.</CheckAlignment>
+    <CheckBrush>The check brush of the component.</CheckBrush>
+    <CheckSize>The check size of the component.</CheckSize>
+    <Checked>Indicates whether the component is in the checked state.</Checked>
     <CheckedChangedEvent>Occurs when the Checked state is changed.</CheckedChangedEvent>
     <ClickEvent>Occurs when a user clicks the component in the window of the viewer.</ClickEvent>
     <ComponentStyle>A style of a component.</ComponentStyle>
+    <CornerRadius>Represents the value to which the corners are rounded.</CornerRadius>
     <Conditions>A collection of the conditions.</Conditions>
-    <CountData>The count of rows for virtual data.</CountData>
+    <CountData>A count of rows for virtual data.</CountData>
     <CrossFiltering>Gets or sets a value which controls applying cross-filters from the current page to that element.</CrossFiltering>
     <DataRelation>Link that is used for master-detail reports rendering.</DataRelation>
     <DataSource>Data source that is used for getting data.</DataSource>
+    <Disabled>The non-interactive state of the component.</Disabled>
     <DockStyle>A type of the component docking.</DockStyle>
     <DoubleClickEvent>Occurs when a user double clicks the component in the report viewer.</DoubleClickEvent>
     <Editable>A value indicates that a component can be edited in the window of viewer.</Editable>
-    <Enabled>A value that indicates will this component be available or not.</Enabled>
+    <Enabled>Indicates that this component will be available or not.</Enabled>
     <ExceedMargins>Gets or sets a value to exceed margins of the component background.</ExceedMargins>
     <FilterMode>A logical operation of combining filters for the current band.</FilterMode>
     <FilterOn>A value that indicates, that filter is turned on.</FilterOn>
     <Filters>A collection of the data filters.</Filters>
     <FixedWidth>A value which indicates that the cell have fixed width.</FixedWidth>
+    <Font>The font used to display text in control.</Font>
+    <ForeColor>The foreground color of this component, which is used to display text.</ForeColor>
     <GetBookmarkEvent>Occurs when getting the Bookmark for the component.</GetBookmarkEvent>
     <GetDrillDownReportEvent>Occurs when it is required to get a report for the Drill-Down operation.</GetDrillDownReportEvent>
     <GetHyperlinkEvent>Occurs when getting the Hyperlink for the component.</GetHyperlinkEvent>
@@ -993,31 +1002,48 @@
     <GetToolTipEvent>Occurs when getting the ToolTip for the component.</GetToolTipEvent>
     <GrowToHeight>A value indicates that the height of this component increases/decreases to the bottom of a container.</GrowToHeight>
     <Height>Height of the component.</Height>
-    <HorAlignment>The horizontal alignment.</HorAlignment>
+    <HorAlignment>The horizontal alignment of the text that will be displayed on the component.</HorAlignment>
+    <Hover>The hover state when a user has placed a cursor above the component.</Hover>
     <Hyperlink>An expression to fill the component Hyperlink.</Hyperlink>
+    <Icon>The icon used for the component.</Icon>
+    <IconAlignment>The alignment of the icon that will be displayed on the component.</IconAlignment>
+    <IconBrush>The icon brush of the component.</IconBrush>
+    <IconSet>The set of icons used in the component.</IconSet>
     <Interaction>Interaction options of this component.</Interaction>
     <Left>Left position of the component.</Left>
     <Linked>A value indicates that the object snap to the container is turned on.</Linked>
     <Locked>A value indicates that moving is locked.</Locked>
+    <Margin>Specifies space between this component and another component's margin.</Margin>
     <MasterComponent>The master-component.</MasterComponent>
     <MaxSize>Maximal size.</MaxSize>
     <MinSize>Minimal size.</MinSize>
     <MouseEnterEvent>Occurs when a user enters the mouse into the area of the component in the report viewer.</MouseEnterEvent>
     <MouseLeaveEvent>Occurs when a user leaves the mouse out of the area of the component in the report viewer.</MouseLeaveEvent>
-    <Name>Component name.</Name>
+    <Name>Indicates the name which is used to identify the component.</Name>
+    <Padding>Specifies the interior spacing of the component.</Padding>
+    <Pressed>The pressed state when a user pressed on the component.</Pressed>
     <Printable>A value that indicates whether a component is printable or not.</Printable>
     <PrintOn>A value that indicates on which pages will a component be printed.</PrintOn>
     <Restrictions>A value that indicates the restrictions of a component.</Restrictions>
+    <Shadow>Shadow settings of the component.</Shadow>
+    <ShapeType>Indicates which shape is used to draw the form of the component.</ShapeType>
     <ShiftMode>A value that indicates the shift mode of a component.</ShiftMode>
+    <Stretch>Describes how the component is resized to fill its allocated space.</Stretch>
     <Sort>The array of strings that describes rules of sorting.</Sort>
     <Tag>An expression to fill the component tag.</Tag>
-    <TextBrush>A brush to draw text.</TextBrush>
+    <Text>The text is associated with the component.</Text>
+    <TextBrush>The brush of the component, which is used to display text.</TextBrush>
+    <ThreeStates>Indicates that control supports two or three states.</ThreeStates>    
     <ToolTip>An expression to fill the component ToolTip.</ToolTip>
     <Top>Top position of the component.</Top>
     <TotalLabel>Gets or sets a value that is displayed as a label for a total.</TotalLabel>
+    <Type>Describes the type of that component behaviour.</Type>
     <UseParentStyles>A value indicates that this component must use styles from the parent component.</UseParentStyles>
-    <VertAlignment>The vertical alignment of an object.</VertAlignment>
+    <VertAlignment>The vertical alignment of the text that will be displayed on the component.</VertAlignment>
+    <VisualStates>Manages the different visual states of the component.</VisualStates>
+    <Watermark>The watermark used for the component.</Watermark>
     <Width>Width of the component.</Width>
+    <WordWrap>Indicates that the multiline text wraps words or not.</WordWrap>
   </StiComponent>
   <StiConstantLines>
     <Antialiasing>A value that control antialiasing drawing mode.</Antialiasing>
@@ -1249,11 +1275,6 @@
     <SupplementCode>Gets or sets the component supplement bar code.</SupplementCode>
     <SupplementType>Gets or sets type of supplement code.</SupplementType>
   </StiEAN8BarCodeType>
-  <StiElement>
-    <BackColor>A back color for the element.</BackColor>
-    <Margin>Element margin.</Margin>
-    <Padding>Element padding.</Padding>
-  </StiElement>
   <StiEmptyBand>
     <BeginRenderEvent>Occurs when band begin render.</BeginRenderEvent>
     <EndRenderEvent>Occurs when band rendering is finished.</EndRenderEvent>
@@ -1636,7 +1657,6 @@
     <UnlimitedBreakable>A value indicates that, when printing multiple-sheet cross-reports, columns and strings are to be broken.</UnlimitedBreakable>
     <UnlimitedHeight>A value indicates that the page has an unlimited height.</UnlimitedHeight>
     <UnlimitedWidth>A value indicates that the page has an unlimited width.</UnlimitedWidth>
-    <Watermark>Watermark of a page.</Watermark>
   </StiPage>
   <StiPanel>
     <ColumnGaps>Distance between two columns.</ColumnGaps>
@@ -1741,16 +1761,16 @@
     <ConvertNulls>A value that shows whether it is necessary to convert null or DBNull.</ConvertNulls>
     <EndRenderEvent>Occurs when the report rendering is finished.</EndRenderEvent>
     <EngineVersion>The current report engine.</EngineVersion>
+    <ExportedEvent>Occurs when report ends exporting.</ExportedEvent>
     <ExportingEvent>Occurs when report starts exporting.</ExportingEvent>
-	  <ExportedEvent>Occurs when report ends exporting.</ExportedEvent>
     <GlobalizationStrings>A collection which consists of globalization strings.</GlobalizationStrings>
     <NumberOfPass>Number of passes which the report generator makes while report rendering.</NumberOfPass>
     <ParametersOrientation>A value which indicates parameters panel orientation.</ParametersOrientation>
     <PreviewMode>The preview mode of a report.</PreviewMode>
     <PreviewSettings>Controls which will be shown in the Preview Window.</PreviewSettings>
+    <PrintedEvent>Occurs when report ends printing.</PrintedEvent>
     <PrinterSettings>Printer settings.</PrinterSettings>
     <PrintingEvent>Occurs when report starts printing.</PrintingEvent>
-	  <PrintedEvent>Occurs when report ends printing.</PrintedEvent>
     <ReferencedAssemblies>An array of referenced assemblies.</ReferencedAssemblies>
     <RenderingEvent>Occurs when a page is rendered.</RenderingEvent>
     <ReportAlias>A report alias.</ReportAlias>
@@ -2149,7 +2169,7 @@
     <ShowBehind>A value that indicates whether Watermark should be drawn behind or in front of page.</ShowBehind>
     <ShowImageBehind>A value that indicates whether the Watermark image should be drawn behind or in front of a page.</ShowImageBehind>
     <Text>A text of a Watermark.</Text>
-    <TextBrush>A brush to a Watermark.</TextBrush>
+    <TextBrush>The brush of the watermark, which is used to display text.</TextBrush>
   </StiWatermark>
   <StiWinControl>
     <BackColor>The background color for the control.</BackColor>
