--- a/localization/ru.ext.xml
+++ b/localization/ru.ext.xml
@@ -264,6 +264,8 @@
     <AddNewConnection>Добавить новое соединение</AddNewConnection>
     <Cancel>Отмена</Cancel>
     <Close>Закрыть</Close>
+    <ChangeExportSettings>Изменить настройки экспорта</ChangeExportSettings>
+    <ChangeExportSettingsToolTip>Будет добавлен код создания класса настроек выбранного формата экспорта. В проекте вы сможете изменить настройки экспорта.</ChangeExportSettingsToolTip>
     <ConnectionsFromReport>Использовать заданное в отчете подключение</ConnectionsFromReport>
     <ConnectionsFromReportToolTip>Будут использованы сохранённые в шаблоне отчёта подключения без каких-либо изменений.</ConnectionsFromReportToolTip>
     <ConnectionsRegData>Подключить данные из кода</ConnectionsRegData>
